added fundamental and simplified taichi dvd

--- a/store/index.html
+++ b/store/index.html
@@ -34,7 +34,7 @@
   <section class="history-classes store-section books-section">
 
     <div class="store-book-container">
-      <h3><span class="red-highlight">NEW!</span> Simplified Tai Chi & The Fundamental Qigong</h3>
+      <h3><span class="red-highlight">NEW!</span> Simplified Tai Chi & The Fundamental Qigong #3</h3>
       <h4>$75.00</h4>
       <a href="#simplifiedqigong-popup" class="animated_popup"><img src="../assets/images/simplifiedfundamental.jpg" height="250px"></a>
       <h5><a href="#simplifiedqigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
@@ -44,7 +44,7 @@
         <p>The simplified Slow Form is a much shorter form that takes only 8-12 minutes to do. It's created for those who can't or doesn't have the time to learn the long form. This form could be taught to new students in just 12 60-90 minutes classes or just 3-4 classes to experienced students.</p>
         <p></p>
         <p><img src="../assets/images/taichifundamental.jpg"></a></p>
-        <h3>The Fundamental Qigong</h3>
+        <h3>The Fundamental Qigong #3</h3>
         <p>Fundamental Qigong #3 focuses on keeping the lower body stable and relaxed while moving the upper body dynamically. The upper body rises, the lower body drops and connects with the ground. The upper body turns and spirals while the lower body remains sunk and rooted. The top and bottom do different things and yet they work together to create the ultimate balance stability and movement.</p>
       </div>
       <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -242,7 +242,7 @@
         <a href="#qigong-popup" class="animated_popup"><img src="../assets/images/taichifundamental.jpg"></a>
         <h5><a href="#qigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
         <div id="qigong-popup" style="display:none">
-          <h3>The Fundamental Qigong</h3>
+          <h3>The Fundamental Qigong #3</h3>
           <p>Fundamental Qigong #3 focuses on keeping the lower body stable and relaxed while moving the upper body dynamically. The upper body rises, the lower body drops and connects with the ground. The upper body turns and spirals while the lower body remains sunk and rooted. The top and bottom do different things and yet they work together to create the ultimate balance stability and movement.</p>
         </div>
         <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
