added fundamental and simplified taichi dvd

--- a/store/index.html
+++ b/store/index.html
@@ -34,15 +34,24 @@
   <section class="history-classes store-section books-section">
 
     <div class="store-book-container">
-      <h3><span class="red-highlight">NEW!</span> Simplified Tai Chi & The Fundamental Qigong #3</h3>
+      <h3><span class="red-highlight">NEW!</span> Taichi Fundamentals Qigong & The Fundamental Qigong #3</h3>
       <h4>$75.00</h4>
-      <a href="#simplifiedqigong-popup" class="animated_popup"><img src="../assets/images/simplifiedfundamental.jpg" height="250px"></a>
+      <a href="#simplifiedqigong-popup" class="animated_popup"><img src="../assets/images/qigongset.jpg" height="250px"></a>
       <h5><a href="#simplifiedqigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
       <div id="simplifiedqigong-popup" style="display:none">
-        <p><img src="../assets/images/simplifiedtaichidvd.jpg"></a></p>
-        <h3>Simplified Tai Chi</h3>
-        <p>The simplified Slow Form is a much shorter form that takes only 8-12 minutes to do. It's created for those who can't or doesn't have the time to learn the long form. This form could be taught to new students in just 12 60-90 minutes classes or just 3-4 classes to experienced students.</p>
-        <p></p>
+        <p><img src="../assets/images/qigong.jpg"></a></p>
+        <h3>Taichi Fundamentals Qigong</h3>
+        <p>Exercises 1 and 2</p>
+
+        <p>Front and back views with instructions</p>
+
+        <p>Taiji Fundamentals Qigong is like a treasure chest. It has many of the key Taiji principles packed into a few simple moves. So it's easy to learn, but highly effective.</p>
+
+        <p>Exercise #1 focuses on opening and developing an eight dimensional perimeter. Loosen the shoulders and upper back; open from the inside and finishes on the outside. </p>
+
+        <p>Exercise #2 focuses on holding and moving the ball. The moves more and deeper when you imagine it moving with a ball embraced in the arms. Learn when does body separates and when does it move in one unit. </p>
+        
+        <p>Extremely good the back. Relieve and heals back pain and shoulder stiffness. </p>
         <p><img src="../assets/images/taichifundamental.jpg"></a></p>
         <h3>The Fundamental Qigong #3</h3>
         <p>Fundamental Qigong #3 focuses on keeping the lower body stable and relaxed while moving the upper body dynamically. The upper body rises, the lower body drops and connects with the ground. The upper body turns and spirals while the lower body remains sunk and rooted. The top and bottom do different things and yet they work together to create the ultimate balance stability and movement.</p>
@@ -71,7 +80,7 @@
     </div>
 
     <div class="store-book-container">
-      <h3><span class="red-highlight">NEW!</span> The Fundamental Qigong</h3>
+      <h3><span class="red-highlight">NEW!</span> The Fundamental Qigong #3</h3>
       <h4>$35.00</h4>
       <a href="#qigong-popup" class="animated_popup"><img src="../assets/images/taichifundamental.jpg"></a>
       <h5><a href="#qigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
@@ -104,46 +113,6 @@
       </form></h6>
     </div>
 
-    <div class="store-book-container">
-        <h3><span class="red-highlight">NEW!</span> Big Red Robe Tea</h3>
-        <h4>$30</h4>
-        <a href="#robetea-popup" class="animated_popup"><img src="../assets/images/robetea.jpg"></a>
-        <h5><a href="#robetea-popup" class="animated_popup book-details-link">Tea Details</a></h5>
-        <div id="robetea-popup" style="display:none">
-          <h3>Big Red Robe Tea</h3>
-          <p><img src="../assets/images/robetea2.jpg"></p>
-
-          <p>Each box contain 32 8 gram bags.</p>
-
-          <p>Benefits: Improve digestion, fight cancer, benefits the heart</p>
-
-          <p><strong>Instructions for tea:</strong>
-          <br>Rinse. Use boiled water to cover the tea, shake or stir it a few times and pour the water out.
-
-          <br>For 1 or 2 person, use half a bag. Refill water up to 8 times or until the flavor is too blend for your taste. It’s better not to put too much water, just keep refilling it. The flavor is different each time, the best flavor should be the second to the fourth time.
-
-          <br>Use one bag for 2 or more people, or if you are going to refill throughout the day. Red/black tea can be kept for the next day; just pour out the leftover liquid. 
-
-          <br>Enjoy! </p>
-
-          <p><strong>History:</strong> Dà Hóng Páo (Chinese: 大红袍; pinyin: dà​hóng páo; literally "Big Red Robe") is an importantWuyi Oolong tea. According to legend, the mother of a Ming Dynasty emperor was cured of an illness by a certain tea, and that emperor sent great red robes to clothe the four bushes from which that tea originated. Three of these original bushes, growing on a rock on Mount Wuyi and reportedly dates back to the Song Dynasty, still survive today and are highly venerated. At one point, less than one kilogram of tea was harvested from these plants each year, of which a portion was retained by the Chinese government. In 2005, Da Hong Pao can sell for 30,000 US dollars per kilogram.</p>
-
-          <p>One (possibly apocryphal) story claims that in 1972, US President Nixon received 50g of Dà Hóng Páo, at the estimated cost of 250,000 US Dollars in 2011 money.</p>
-
-          <p>In recent years, a number of companies have invested in preserving the interest in this tea and other so-called "artisan" teas, which typically are of very high quality and have rich histories as is true with Da Hong Pao. These have an initially high cost of production (and typically are only considered authentic when grown in their place of origin), but, as they have quickly become popular in Western countries, prized selections of the tea are available each year, with quality being consistent due to the increased popularity of tea.</p>
-
-          <p>Cuttings taken from the original plants have been used to produce similar grades of tea from genetically identical plants. Taste variations produced by processing, differences in the soil, and location of these later generation plants is used to grade the quality of various Da Hong Pao teas.</p>
-
-          <p>Due to its high quality, Da Hong Pao tea is usually reserved for honored guests in China.</p>
-
-        </div>
-        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-        <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="LP5XQRQ4JRUUQ">
-        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
-        </form></h6>
-    </div>
-      
     <div class="history-container store">
       <h1>Books</h1>
 
@@ -237,7 +206,7 @@
       </div>
 
       <div class="store-book-container">
-        <h3><span class="red-highlight">NEW!</span> The Fundamental Qigong</h3>
+        <h3><span class="red-highlight">NEW!</span> The Fundamental Qigong #3</h3>
         <h4>$35.00</h4>
         <a href="#qigong-popup" class="animated_popup"><img src="../assets/images/taichifundamental.jpg"></a>
         <h5><a href="#qigong-popup" class="animated_popup book-details-link">DVD Details</a></h5>
