--- a/workshops/index.html
+++ b/workshops/index.html
@@ -91,7 +91,7 @@ or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
 				<h3>Olympia, Washington<</h3>
        		 		<p>August 11th to August 14th 2017</p>
 				<p>Focus on forms and Fundamental Qigong.<br/>
- 				<a href="http://andyholmes.us/Schedule.html">Full details here</a></p>
+ 				<a target="_blank" href="http://andyholmes.us/Schedule.html">Full details here</a></p>
 	</div>
 	    
 
