--- a/workshops/index.html
+++ b/workshops/index.html
@@ -88,7 +88,7 @@ or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
 	<a href="#wa2017" class="animated_popup"><h1>Olympia, Washington</h1></a>
 	    <h2>August 11th to August 14th 2017</h2>
             		<div id="wa2017" style="display:none" class="image-popup" class="book-details-popup">
-				<h3>Olympia, Washington<</h3>
+				<h3>Olympia, Washington</h3>
        		 		<p>August 11th to August 14th 2017</p>
 				<p>Focus on forms and Fundamental Qigong.<br/>
  				<a target="_blank" href="http://andyholmes.us/Schedule.html">Full details here</a></p>
