--- a/classes/olympia/index.html
+++ b/classes/olympia/index.html
@@ -31,6 +31,13 @@
   </div>
 
   <section class="history-classes link-container">
+    
+      <div class="history-container classes-container">
+        <h1>Instructor: Andy Holmes/h1></a>  
+            <p><a href="http://andyholmes.us/Schedule.html" target="_blank">Full Class Schedule</a>
+            <br/>Email: <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
+      </div>
+    
     <div class="history-container classes-container">
       <h1>Instructor: Terry Johnson</h1></a>
       <p>Contact: <a href="mailto:wildcats31@earthlink.net">wildcats31@earthlink.net</a></p>
