--- a/classes/olympia/index.html
+++ b/classes/olympia/index.html
@@ -33,7 +33,7 @@
   <section class="history-classes link-container">
     
       <div class="history-container classes-container">
-        <h1>Instructor: Andy Holmes/h1></a>  
+        <h1>Instructor: Andy Holmes</h1> 
             <p><a href="http://andyholmes.us/Schedule.html" target="_blank">Full Class Schedule</a>
             <br/>Email: <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
       </div>
