--- a/workshops/index.html
+++ b/workshops/index.html
@@ -150,6 +150,16 @@ or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
 				<p>Details to follow</p>
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
+	    
+	    
+	<a href="#crete2018" class="animated_popup"><h1>Crete</h1></a>
+       		<h2>September 21st to September 26th 2018</h2>
+            		<div id="crete2018" style="display:none" class="image-popup" class="book-details-popup">
+       		 <h3>Crete</h3>
+       		 <p>September 21st to September 26th 2018</p>
+				<p>Details to follow</p>
+	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
+	</div>
 
       <!-- elements end -->
 
