--- a/workshops/index.html
+++ b/workshops/index.html
@@ -101,16 +101,44 @@ or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
 	    <h2>August 25th to August 28th 2017</h2>
             		<div id="uk2017" style="display:none" class="image-popup" class="book-details-popup">
 				<h3>London UK</h3>
-       		 <p>August 25th to August 28th 2017</p>
-				<p>Details to follow</p>
+       		 <h3>August 25th to August 28th 2017</h3>
+				<p>
+				Venue: Fanshawe Community Hall, Barnmead Road, Dagenham, RM9 5DX.<br/>	
+				Schedule:<br/>
+				Friday August 25th<br/>
+
+				3:30pm to 5:30pm -- Saber and Sword, &pound;25.<br/>
+				6pm to 8pm -- Fundamental Qigong, &pound;25.<br/>
+				<br/>
+				Saturday August 26th<br/>
+				<br/>
+				10:30am to 1pm and 2:30pm to 5pm<br/>
+				Slow Set based on fundamental Qigong and corrections, &pound;60.<br/>
+				<br/>
+				Sunday August 27th<br/>
+				<b><br/>
+				Please note that both Sunday classes are not yet fully confirmed.<br/>
+				<br/>
+				2pm to 4:30pm Push hands -- &pound;30.<br/>
+				5pm to 7pm -- Fast, Fajin and Hao &pound;25.<br/>
+				</b><br/>
+				<br/>
+				Monday August 28th<br/>
+				<br/>
+				10:30am to 1pm and 2:30pm to 5pm -- Double Sticks Form, &pound;60.<br/>
+				Cost<br/>
+				&pound;200 for all the classes. 
+					&pound;180 instructor’s discount or<br/>
+				10% off the regular tuition.<br/>
+				</p>
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
 			</div>
 	    
 	    
-       <a href="#france2017" class="animated_popup"><h1>Southern Ardèche, France</h1></a>
+       <a href="#france2017" class="animated_popup"><h1>Southern Ard&egrave;che, France</h1></a>
        <h2>August 31st to September 5th 2017</h2>
             <div id="france2017" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Southern Ardèche, France</h3>
+        <h3>Southern Ard&grave;che, France</h3>
         <p>August 31st to September 5th 2017</p>
 	<p>Push Hands and Forms training in Southern Ardèche of France</p>
 	<p><a href="http://www.domainedutaille.com/" target="_blank">Domaine du Taillé en Ardèche</a>
