--- a/workshops/index.html
+++ b/workshops/index.html
@@ -103,7 +103,7 @@ or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
 				<h3>London UK</h3>
        		 <h3>August 25th to August 28th 2017</h3>
 				<p>
-				Venue: Fanshawe Community Hall, Barnmead Road, Dagenham, RM9 5DX.<br/>	
+				Venue: Fanshawe Community Hall, Barnmead Road, <br/>Dagenham, RM9 5DX.<br/>	
 				Schedule:<br/>
 				Friday August 25th<br/>
 
@@ -125,7 +125,7 @@ or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
 				<br/>
 				Monday August 28th<br/>
 				<br/>
-				10:30am to 1pm and 2:30pm to 5pm -- Double Sticks Form, &pound;60.<br/>
+				10:30am to 1pm and 2:30pm to 5pm -- Double Sticks Form, &pound;60.<br/><br/>
 				Cost<br/>
 				&pound;200 for all the classes. 
 					&pound;180 instructor’s discount or<br/>
