--- a/workshops/index.html
+++ b/workshops/index.html
@@ -135,13 +135,13 @@ or a <a href="../assets/docs/NYPH2017.pdf">PDF</a> and send to Alex Dong.</p>
 			</div>
 	    
 	    
-       <a href="#france2017" class="animated_popup"><h1>Southern Ard&egrave;che, France</h1></a>
+       <a href="#france2017" class="animated_popup"><h1>Southern Ardeche, France</h1></a>
        <h2>August 31st to September 5th 2017</h2>
             <div id="france2017" style="display:none" class="image-popup" class="book-details-popup">
         <h3>Southern Ard&grave;che, France</h3>
         <p>August 31st to September 5th 2017</p>
-	<p>Push Hands and Forms training in Southern Ardèche of France</p>
-	<p><a href="http://www.domainedutaille.com/" target="_blank">Domaine du Taillé en Ardèche</a>
+	<p>Push Hands and Forms training in Southern Ard&egrave;che of France</p>
+	<p><a href="http://www.domainedutaille.com/" target="_blank">Domaine du Taill&eacute; en Ard&egrave;che</a>
 	<p>Further information in 
 		<a href="../assets/docs/France_2017_FR.docx">French</a> or 
 		<a href="../assets/docs/France_2017_EN.docx">English</a></p>
