--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -65,13 +65,15 @@
         <p>I like tai chi because it's mentally and physically stimulating, and
         makes you feel great. I live in Essex.</p>
       </div>
-      <p>Thursday Beginners 11:00 to 12:20
+      <p>Wednesday Beginners 11:00 to 12:20
       <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?NW1+7JY" target="_blank">Soho Gyms, 193, Camden High Street, London NW1 7JY.</a> Phone: 020 7482 4524. Cost £10.00</p>
-      <p>Thursday Beginners 18:40 to 20:10
+      <p>Phone: 07952 593337</p>
+      <!-- <p>Thursday Beginners 18:40 to 20:10
       <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?EC1R+1XX" target="_blank">Venue: St Mark's Church, Myddelton Square, EC1R 1XX</a> (Tube: Angel) Cost £7.00.</p>
       <p>Thursday Hao style and push hands, 20:10 to 20:40
       <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?EC1R+1XX" target="_blank">Venue: St Mark's Church, Myddelton Square, EC1R 1XX</a> (Tube: Angel)  Open to students who know the Slow Set (free) </p>
-      <p>Phone: 07952 593337</p>
+       -->
+      
     </div>
 
     <div class="history-container classes-container instructor-container">
