--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -66,7 +66,8 @@
         makes you feel great. I live in Essex.</p>
       </div>
       <p>Wednesday Beginners and Intermediate 11:00 to 12:20
-      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?NW1+7JY" target="_blank">Soho Gyms, 193, Camden High Street, London NW1 7JY.</a> Phone: 020 7482 4524. Cost &pound;13.00</p>
+      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?NW1+7JY" target="_blank">Soho Gyms, 193, Camden High Street, London NW1 7JY.</a> <br/>
+        Phone: 020 7482 4524. Cost &pound;13.00</p>
       <p>Phone: 07952 593337</p>
       <!-- <p>Thursday Beginners 18:40 to 20:10
       <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?EC1R+1XX" target="_blank">Venue: St Mark's Church, Myddelton Square, EC1R 1XX</a> (Tube: Angel) Cost £7.00.</p>
