--- a/workshops/index.html
+++ b/workshops/index.html
@@ -124,7 +124,10 @@
             		<div id="upstatenov2017" style="display:none" class="image-popup" class="book-details-popup">
        		 <h3>Upstate New York</h3>
        		 <p>November 3rd to November 5th 2017</p>
-				<p>Details to follow</p>
+		<p>For further information and to book, please download	a
+		<a href="../assets/docs/flyer_nov2017.docx" target ="_blank">Word document</a> or a
+		<a href="../assets/docs/flyer_nov2017.pdf" target ="_blank">PDF</a> form.</p>
+				
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
 	    
