--- a/workshops/index.html
+++ b/workshops/index.html
@@ -156,7 +156,7 @@
        <p>For more information contact Lydia at <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a>
          or Yiannis at <a href="mailto:taichiathens@gmail.com">taichiathens@gmail.com</a>
        </p>
-
+	</div>
 
 	    
 	<a href="#crete2018" class="animated_popup"><h1>Crete</h1></a>
