--- a/workshops/index.html
+++ b/workshops/index.html
@@ -154,7 +154,7 @@
 	    
 	    
 	<a href="#ww2018" class="animated_popup"><h1>Westwater</h1></a>
-       		<h2>April 27th to May 5th 2018 2018</h2>
+       		<h2>April 27th to May 5th 2018</h2>
             		<div id="ww2018" style="display:none" class="image-popup" class="book-details-popup">
        		 <h3>Westwater</h3>
        		 <p>April 27th to May 5th 2018 2018</p>
