--- a/workshops/index.html
+++ b/workshops/index.html
@@ -157,7 +157,7 @@
        		<h2>April 27th to May 5th 2018</h2>
             		<div id="ww2018" style="display:none" class="image-popup" class="book-details-popup">
        		 <h3>Westwater</h3>
-       		 <p>April 27th to May 5th 2018 2018</p>
+       		 <p>April 27th to May 5th 2018</p>
 				<p>Details to follow</p>
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
