--- a/classes/newyorkcity/index.html
+++ b/classes/newyorkcity/index.html
@@ -41,22 +41,21 @@
       <h2>Venue: 440 Lafayette</h2> 
         <h3>Thursday evenings</h3>
   
-      <h4>Qigong #</h4>
-      <p>Room 3C<br/> 
+      <p><b>Qigong</br/>
+      Room 3C<br/> 
       6pm to 7pm<br/> 
         (Open to drop-ins)</p>
-      <h4>Tai Chi</h4>
-      <p>7 pm to 8:30 pm<br/>
+      <p>Tai Chi<br/>
+      7 pm to 8:30 pm<br/>
         Room 4F<br/>
       </p>
-      <p
-Beginner’s class start on Thursday  September 14th 2017
+      <p>Beginner’s class start on Thursday  September 14th 2017
       </P>
       
       <h2>Venue: 131 W 72nd St</h2>
       <h3>Wednesday mornings</h3>
-      <h4>Tai Chi and Qigong</h2>
-      <p>10am to 11am</p>
+      <p>Tai Chi and Qigong<br/>
+      10am to 11am</p>
         
       <p>Beginner’s class starting on Wednesday September 20th 2017</p>
 <p>
