--- a/classes/newyorkcity/index.html
+++ b/classes/newyorkcity/index.html
@@ -41,7 +41,7 @@
       <h2>Venue: 440 Lafayette</h2> 
         <h3>Thursday evenings</h3>
   
-      <p><b>QigongM/b></br>
+      <p><b>Qigong</b></br>
       Room 3C<br/> 
       6pm to 7pm<br/> 
         (Open to drop-ins)</p>
