--- a/classes/china/index.html
+++ b/classes/china/index.html
@@ -1,1 +1,32 @@
-test
+
+
+Instructor: Toni Demoulin
+
+Beijing Tai Chi with Toni DeMoulin, 45 years teaching experience
+
+Instruction: 
+
+Traditional Yang taijiquan long form, Qi Gong, Hao & Dong (Tung) style taijiquan, Dong DaDe Simplified Taijiquan, weapons, applications, conflict resolution & Push Hands 
+
+Schedule:
+9:30 AM Saturdays and Sundays.
+
+Group classes free to the public.
+
+Private instruction available.
+
+Location: 
+
+Beijing, China. Email or WeChat for address.
+
+Free to the public.
+
+Contact: 
+
+Toni DeMoulin
+Phone: +86 881-0118652
+
+WeChat name-Toni DeMoulin 董妮 WeChat ID-Tonidemoulin 
+
+Email: taichitoni@gmail.com
+
