--- a/classes/china/index.html
+++ b/classes/china/index.html
@@ -42,31 +42,35 @@
       <p>
 Beijing Tai Chi with Toni DeMoulin, 45 years teaching experience
 
-Instruction: 
-
-Traditional Yang taijiquan long form, Qi Gong, Hao & Dong (Tung) style taijiquan, Dong DaDe Simplified Taijiquan, weapons, applications, conflict resolution & Push Hands 
-
-Schedule:
+      <h2>Instruction</h2>
+      <p>
+      Traditional Yang taijiquan long form, Qi Gong, Hao & Dong (Tung) style taijiquan, Dong DaDe Simplified Taijiquan, weapons, applications, conflict resolution & Push Hands 
+      </p>
+      <h2>Schedule</h2>
+      <p>
 9:30 AM Saturdays and Sundays.
 
 Group classes free to the public.
 
 Private instruction available.
-
-Location: 
+ </p>
+      
+      <h2>Location</h2>
+       <p>
 
 Beijing, China. Email or WeChat for address.
 
 Free to the public.
 
-Contact: 
+       </p>
+      <h2>Contact</h2> 
+        <p>
+        Toni DeMoulin<br/>
+          Phone: +86 881-0118652<br/>
 
-Toni DeMoulin
-Phone: +86 881-0118652
+            WeChat name-Toni DeMoulin 董妮 WeChat ID-Tonidemoulin <br/>
 
-WeChat name-Toni DeMoulin 董妮 WeChat ID-Tonidemoulin 
-
-Email: taichitoni@gmail.com
+   Email: <a href="mailto:taichitoni@gmail.com">taichitoni@gmail.com</a><br/>
 
       </p>
       <p>Class schedule </p>
