--- a/classes/index.html
+++ b/classes/index.html
@@ -46,7 +46,6 @@
         <li><a href="newyorkcity/">New York City</a></li>
         <li><a href="carmelvalley/">Carmel Valley, California</a></li>
         <li><a href="pacificgrove/">Pacific Grove, California</a></li>
-        <li><a href="santabarbara/">Santa Barbara, California</a></li>
         <li><a href="coloradoutah/">Colorado And Utah Borders</a></li>
         <li><a href="oahu/">Honolulu, Hawaii</a></li>
         <li><a href="longisland/">Long Island, New York</a></li>
@@ -56,10 +55,16 @@
         <li><a href="olympia/">Olympia, Washington</a></li>
         <li><a href="princeton/">Princeton, New Jersey</a></li>
       </ul>
+      
       <h2>Canada</h2>
       <ul class="classes-ul">
         <li><a href="newbrunswick">New Brunswick</a></li>
         <li><a href="quebec">Quebec</a></li>
+      </ul>
+      
+      <h2>China</h2>
+      <ul class="classes-ul">
+        <li><a href="china">Beijing</a></li>
       </ul>
 
       <h2 class="rest-of-the-world">Europe and South America</h1>
