--- a/classes/china/index.html
+++ b/classes/china/index.html
@@ -44,32 +44,25 @@
 
       <h2>Instruction</h2>
       <p>
-      Traditional Yang taijiquan long form, Qi Gong, Hao & Dong (Tung) style taijiquan, Dong DaDe Simplified Taijiquan, weapons, applications, conflict resolution & Push Hands 
+      Traditional Yang taijiquan long form, Qi Gong, Hao and Dong (Tung) style taijiquan, Dong DaDe Simplified Taijiquan, weapons, applications, conflict resolution & Push Hands 
       </p>
       <h2>Schedule</h2>
-      <p>
-9:30 AM Saturdays and Sundays.<br/>
-
-Group classes free to the public.<br/>
-
-Private instruction available.<br/>
- </p>
+      <p>9:30 AM Saturdays and Sundays.<br/>
+      Group classes free to the public.<br/>
+      Private instruction available.<br/>
+      </p>
       
       <h2>Location</h2>
        <p>
-
        Beijing, China. Email or WeChat for address.<br/>
-
-        Free to the public.<br/>
       </p>
       <h2>Contact</h2> 
         <p>
         Toni DeMoulin<br/>
         Phone: +86 881-0118652<br/>
         WeChat name-Toni DeMoulin 董妮 WeChat ID-Tonidemoulin <br/>
-   Email: <a href="mailto:taichitoni@gmail.com">taichitoni@gmail.com</a><br/>
+        Email: <a href="mailto:taichitoni@gmail.com">taichitoni@gmail.com</a><br/>
       </p>
-  
     </div>
 
     
