--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -103,11 +103,16 @@
             <p>I attended classes with Alex in the UK, and the energy and well being was great. I wouldn't say its a cure but it does help dilute physical and mental problems.
             <p>I like tai chi because it is beneficial to my health and it makes me feel good as long as I keep training. </p>
         </div>
+      
+      <h2>Class schedule</h2>
+      
       <p>Fanshawe Community Hall</br>
         Barnmead Road</br>
         Dagenham RM9 5DX</br>
-        12:30pm - 1:30pm Tuesdays</br>
-        Please make a donation to pay for the hall</br>
+        Tuesday 12:30pm - 1:30pm</br>
+        Please make a donation to pay for the hall.
+      <h2>Contact</h2>
+      <p>
         Email: <a href="mailto:taichichaun@gmail.com">taichichaun@gmail.com</a>
       </p>
     </div>
