--- a/workshops/index.html
+++ b/workshops/index.html
@@ -80,7 +80,9 @@
                  <div id="moncton2017" style="display:none" class="image-popup" class="book-details-popup">
                  <h3>Moncton, Canada</h3>
                  <p>November 10th to November 12th 2017</p>
-                 <p>Details to follow</p>
+                <p>For further information and to book, please download	a
+		<a href="../assets/docs/NB2017.doc" target ="_blank">Word document</a> or a
+		<a href="../assets/docs/NB2017.pdf" target ="_blank">PDF</a> form.</p>
             <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
             </div>
 
