--- a/workshops/index.html
+++ b/workshops/index.html
@@ -106,9 +106,9 @@
          <dd>Special offer for the whole workshop 225 &euro;</dd>
          <dt>Venues</dt>
 	 <dd>Thursday 7th December: Plastira Nikolaou 62, Nea Smyrni
-  		<a href="https://her.is/2z6T3nJ">map</a></dd>
+  		<a  target="_blank" href="https://her.is/2z6T3nJ">map</a></dd>
 	<dd>Friday 8th December to Sunday 10th December:  Ptolemeon 1, Pagrati, Athens
-  		<a href="https://her.is/2yQo3aB">map</a></dd>
+  		<a  target="_blank" href="https://her.is/2yQo3aB">map</a></dd>
        </dl>
 
        <p>For more information contact Lydia at <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a>
