--- a/workshops/index.html
+++ b/workshops/index.html
@@ -96,7 +96,7 @@
          <dt>Programme</dt>
          <dd>Thursday 7th December 19.00-21.30 Push Hands 35 &euro;</dd>
          <dd>Friday  8th December 10:30-13:00 Sticks    35 &euro;</dd>
-         <dd>       19:00-21:30 Hao       35 &euro;</dd>
+         <dd>       19:00-21:30  Sword and applications        35 &euro;</dd>
          <dd>Saturday 9th December  10:30-13:00 Slow set           35 &euro;</dd>
          <dd>     14:30-15:45 Slow set applications   20 &euro; (this class only)</dd>
          <dd>     15:45-17:00 Sabre   20 &euro; (this class only)</dd>
