--- a/classes/china/index.html
+++ b/classes/china/index.html
@@ -61,7 +61,7 @@
         Toni DeMoulin<br/>
         Phone: +86 881-0118652<br/>
         WeChat name-Toni DeMoulin 董妮 WeChat ID-Tonidemoulin <br/>
-        Email: <a href="mailto:taichitoni@gmail.com">taichitoni@gmail.com</a><br/>
+        Email: <a href="mailto:taichitoni1@hotmail.com">taichitoni1@hotmail.com</a><br/>
       </p>
     </div>
 
