--- a/classes/china/index.html
+++ b/classes/china/index.html
@@ -47,9 +47,10 @@
       Traditional Yang taijiquan long form, Qi Gong, Hao and Dong (Tung) style taijiquan, Dong DaDe Simplified Taijiquan, weapons, applications, conflict resolution & Push Hands 
       </p>
       <h2>Schedule</h2>
-      <p>9:30 AM Saturdays and Sundays.<br/>
-      Group classes free to the public.<br/>
-      Private instruction available.<br/>
+      <p>
+        Fengtai District, Beijing<br/>
+        Sundays 9:30-11:00<br/>
+        Monday, Tuesday, Thursday 9:10-10:00
       </p>
       
       <h2>Location</h2>
