--- a/workshops/index.html
+++ b/workshops/index.html
@@ -92,7 +92,7 @@
         <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
         </div>
 
-      <a href="#cz2018" class="animated_popup"><h1>London, UK</h1></a>
+      <a href="#cz2018" class="animated_popup"><h1>Prague, Czech Republic</h1></a>
        <h2>June 15th to June 17th 2018</h2>
         <div id="cz2018" style="display:none" class="image-popup" class="book-details-popup">
            <h3>Prague, Czech Republic</h3>
