--- a/classes/longisland/index.html
+++ b/classes/longisland/index.html
@@ -45,10 +45,11 @@
           <p>Master Dong's teachings have brought Jeff's art to a new level. Jeff is honored to be given the opportunity to show others Dong Taiji.</p>
         </div>
       <p> <b>Mineola - Yang Style slow set Classes </b><br/> 
-       Monday 7:30 -9:30 pm<br/>  
-      Wednesday 7:30- 9:30 pm<br/>
-       Classes are like semi-private<br/>
-      2 Hour Class $25</p> 
+        Monday 7:30 -9:30 pm<br/>  
+        Wednesday 7:30- 9:30 pm<br/>
+        Thursday 7:30 pm-9:30 pm<br/>
+        Classes are like semi-private<br/>
+        2 Hour Class $25</p> 
 
         <p> Also Available for private lessons at your convenience</p> 
       <p><b> NYC</b><br/> 
