--- a/classes/princeton/index.html
+++ b/classes/princeton/index.html
@@ -64,8 +64,12 @@
       <p>New students are always welcome – please contact me as noted below.</p>
       <p>Contact:  Todd Tieger
         Phone: 609-439-8656 or Email: <a href="mailto:todd.tieger@gmail.com">todd.tieger@gmail.com</a>
-     
-      </p>
+           </p>
+      <p>
+        For more information about taijiquan, my background, and videos of the form, please visit the 
+        <a target ="_blank" href="https://sites.google.com/site/toddtiegertaichichuan/">class website</a>
+            </p>
+  
     </div>
 
   </section>
