--- a/classes/carmel/index.html
+++ b/classes/carmel/index.html
@@ -36,7 +36,12 @@
         <div id="andyholmes-popup" class="image-popup" style="display:none">
           <img src="../../assets/images/instructor/andrewallison.jpg">
           <h3>Andrew Allison</h3>
-          <p>A certified teacher of the Dong Yingjie Legacy, i.e., classical Yang-style, Taiji School, Andrew has studied the art since the early 1980s, initially under Master Wu Ta-Yeh at the Taijiquan Tutelage of Palo Alto and under Master Alex Dong since 1994. He shares Alex's belief in the importance of maintaining the traditional style handed down through four generations of the Dong (Tung) family. Andrew teaches classes at the Carmel Foundation in Carmel, Del Mesa Carmel and assists at the Jing Chi Shen school in Carmel Valley.</p>
+          <p>A certified teacher of the Dong Yingjie Legacy, i.e., classical Yang-style, Taiji School, 
+            Andrew has studied the art since the early 1980s, initially under Master Wu Ta-Yeh at the 
+            Taijiquan Tutelage of Palo Alto and under Master Alex Dong since 1994. He shares Alex's belief 
+            in the importance of maintaining the traditional style handed down through four generations of 
+            the Dong (Tung) family. Andrew teaches classes at the Carmel Foundation in Carmel, Del Mesa Carmel 
+            and assists at the Jing Chi Shen school in Carmel Valley.</p>
         </div>
         <p>Del Mesa Carmel, Carmel Valley
         <br>Beginning Tai Chi Wednesday 9:00-10:30am
