--- a/classes/carmel/index.html
+++ b/classes/carmel/index.html
@@ -36,16 +36,15 @@
         <div id="andyholmes-popup" class="image-popup" style="display:none">
           <img src="../../assets/images/instructor/andrewallison.jpg">
           <h3>Andrew Allison</h3>
-          <p>A certified teacher of the Dong Yingjie Legacy, i.e., classical Yang-style, Taiji School, 
+          <p>A Senior Instructor in the Dong Yingjie Legacy, i.e., classical Yang-style, Taiji School, 
             Andrew has studied the art since the early 1980s, initially under Master Wu Ta-Yeh at the 
-            Taijiquan Tutelage of Palo Alto and under Master Alex Dong since 1994. He shares Alex's belief 
-            in the importance of maintaining the traditional style handed down through four generations of 
-            the Dong (Tung) family. Andrew teaches classes at the Carmel Foundation in Carmel, Del Mesa Carmel 
-            and assists at the Jing Chi Shen school in Carmel Valley.</p>
+            Taijiquan Tutelage of Palo Alto and under Master Alex Dong since 1994. 
+            He shares Alex's belief in the importance of maintaining the traditional style handed 
+            down through four generations of the Dong (Tung) family.</p>
         </div>
-        <p>Del Mesa Carmel, Carmel Valley
-        <br>Beginning Tai Chi Wednesday 9:00-10:30am
-        <br>Phone: 831-626-4361
+        <p>Location: Del Mesa Carmel, 500 Del Mesa Carmel, Carmel, CA 93923
+          Beginning/Intermediate Tai Chi Wednesday 9:00-10:30am 
+          Phone: 831-626-4361 
         <br>Email (preferred): <a href="mailto:allison.aa@gmail.com">allison.aa@gmail.com</a></p>
     </div>
     
