--- a/classes/index.html
+++ b/classes/index.html
@@ -44,7 +44,7 @@
       <h2>United States</h2>
       <ul class="classes-ul">
         <li><a href="newyorkcity/">New York City</a></li>
-        <li><a href="carmelvalley/">Carmel Valley, California</a></li>
+        <li><a href="carmel/">Carmel, California</a></li>
         <li><a href="pacificgrove/">Pacific Grove, California</a></li>
         <li><a href="coloradoutah/">Colorado And Utah Borders</a></li>
         <li><a href="oahu/">Honolulu, Hawaii</a></li>
