--- a/classes/carmelvalley/index.html
+++ b/classes/carmelvalley/index.html
@@ -29,40 +29,9 @@
   <div class="header-background">
     <h1>Carmel Valley, California</h1>
   </div>
-
-  <section class="history-classes">
-    <div class="history-container classes-container">
-      <a href="#andyholmes-popup" class="animated_popup"><h1>Instructor: Andrew Allison</h1></a>
-        <div id="andyholmes-popup" class="image-popup" style="display:none">
-          <img src="../../assets/images/instructor/andrewallison.jpg">
-          <h3>Andrew Allison</h3>
-          <p>A certified teacher of the Dong Yingjie Legacy, i.e., classical Yang-style, Taiji School, Andrew has studied the art since the early 1980s, initially under Master Wu Ta-Yeh at the Taijiquan Tutelage of Palo Alto and under Master Alex Dong since 1994. He shares Alex's belief in the importance of maintaining the traditional style handed down through four generations of the Dong (Tung) family. Andrew teaches classes at the Carmel Foundation in Carmel, Del Mesa Carmel and assists at the Jing Chi Shen school in Carmel Valley.</p>
-        </div>
-        <p>Del Mesa Carmel, Carmel Valley
-        <br>Beginning Tai Chi Wednesday 9:00-10:30am
-        <br>Phone: 831-626-4361
-        <br>Email (preferred): <a href="mailto:allison.aa@gmail.com">allison.aa@gmail.com</a></p>
-    </div>
-
-    
-    <!--
-    <div class="history-container classes-container instructor-container">
-      <a href="#tiffanymusada-popup" class="animated_popup"><h1>Instructor: Tiffany Masuda</h1></a>
-        <div id="tiffanymusada-popup" class="image-popup" style="display:none">
-          <img src="../../assets/images/instructor/tiffanymasuda.jpg">
-          <h3>Tiffany Masuda</h3>
-          <p>Tiffany began studying taijiquan in 2006 while attending college in San Luis Obispo, CA. She trained at the Wushu Taichi Center that followed the teachings of Master Chen Xiaowang's Chen Style. In 2009, She moved to Monterey, CA where she took up taiji again but this time Master Alex Dong's Yang Style under Jing Qi Shen School of Taijiquan led by Pat Roberts. Since then she has attended workshops held in Carmel Valley, CA and Westwater, UT. In 2012 she has started teaching taiji and will become officially certified in 2014. She teaches classes at the Carmel Valley Athletic Club and giving group and private lessons both in Carmel and Carmel Valley.</p>
-        </div>
-        <p>Carmel Valley Athletic Club
-        <br>Tuesdays and Thursdays: 5:00-6:00 pm
-        <br>Advanced/Intermediate
-        <br>Wednesdays: 4:30-5:30 pm
-        <br>Email: <a href="mailto:temasuda@hotmail.com">temasuda@hotmail.com</a></p>
-    </div>
-    -->
-    
-  </section>
-
+  <p>See <a href="/classes/carmel">Carmel classes</a></p>
+  
+  
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
