--- a/classes/carmel/index.html
+++ b/classes/carmel/index.html
@@ -45,7 +45,7 @@
         <p>Location: Del Mesa Carmel, 500 Del Mesa Carmel, Carmel, CA 93923<br\>
           Beginning/Intermediate Tai Chi Wednesday 9:00-10:30am <br\>
           Phone: 831-626-4361 <br\>
-        <br>Email (preferred): <a href="mailto:allison.aa@gmail.com">allison.aa@gmail.com</a></p>
+          Email (preferred): <a href="mailto:allison.aa@gmail.com">allison.aa@gmail.com</a></p>
     </div>
     
   </section>
